@@ -1,6 +1,7 @@
 == 2.0.1
 
 * Allow the chaining of conditions off of a search object. Ex: search.username_like("bjohnson").age_gt(20).all
+* Split out left outer join creation into its own method, allowing you to use it in your own named scopes.
 
 == 2.0.0
 
